fixing typos and structure

--- a/hlanguage.tex
+++ b/hlanguage.tex
@@ -1,3 +1,4 @@
+% ----------------------------------------------------------------------
 \begin{frame}[fragile]{Heuristic language}
 \begin{itemize}\normalsize
 \item<1-> \structure{Heuristic directive} \
@@ -27,8 +28,9 @@
 \end{semiverbatim}
 \end{itemize}
 \end{frame}
+% ----------------------------------------------------------------------
 %
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../asp"
+%%% TeX-master: "../../main"
 %%% End:
