--- a/hoptions.tex
+++ b/hoptions.tex
@@ -1,3 +1,4 @@
+% ----------------------------------------------------------------------
 \begin{frame}[fragile]{Heuristic options}
   \begin{itemize}
   \item<1-> Alternative for specifying structure-oriented heuristics
@@ -16,10 +17,16 @@
                 8=min|16=show} atoms
 \end{verbatim}
 \end{minipage}
-\\\medskip
+\\\bigskip
 \item<3-> Engage heuristic modifications (in both settings!)
 \begin{verbatim}
  --heuristic=Domain
 \end{verbatim}
   \end{itemize}
 \end{frame}
+% ----------------------------------------------------------------------
+%
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../main"
+%%% End:
