--- a/decide.tex
+++ b/decide.tex
@@ -1,10 +1,11 @@
+% ----------------------------------------------------------------------
 \begin{frame}{Inside \alert<1>{\textit{decide}}}
   \bigskip
   \begin{itemize}
   \item<2-> \structure{Basic concepts}
     \begin{itemize}
-    \item Atoms, $\mathcal{A}$
-    \item Assignments, $\ass: \mathcal{A}\to\{\true,\false\}$
+    \item \structure{Atoms}       \ $\mathcal{A}$
+    \item \structure{Assignments} \ $\ass: \mathcal{A}\to\{\true,\false\}$
       \begin{itemize}
       \item[]
         $\tlits{\ass}=\{a\in\mathcal{A}\mid\Tsigned{a}\in\ass\}$ \ and \
@@ -28,7 +29,8 @@
     \end{enumerate}
   \end{itemize}
 \end{frame}
-
+% ----------------------------------------------------------------------
+%
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../../main"
