--- a/motivation.tex
+++ b/motivation.tex
@@ -1,3 +1,4 @@
+% ----------------------------------------------------------------------
 \begin{frame}[c]{Motivation}
   \begin{itemize}
   \item<1-> \structure{Observation} \
@@ -15,8 +16,9 @@
     \end{itemize}
   \end{itemize}
 \end{frame}
+% ----------------------------------------------------------------------
 %
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../asp"
+%%% TeX-master: "../../main"
 %%% End:
