--- a/summary.tex
+++ b/summary.tex
@@ -1,7 +1,15 @@
 % ----------------------------------------------------------------------
 \begin{frame}[c]{Summary}
   \begin{itemize}
-  \item <1-> TBF
+  \item Heuristic directives allow for influencing the search for stable models
+    \par\smallskip
+    by manipulating non-deterministic assignments
+    \bigskip
+  \item Heuristic directives reorder stable models (without changes)
+    \smallskip
+  \item Heuristic directives are declarative
+    \smallskip
+  \item Heuristic directives are (sometimes too) powerful
   \end{itemize}
 \end{frame}
 % ----------------------------------------------------------------------
